grammar/HuskyLangParser.cpp

// Generated from grammar/HuskyLang.g4 by ANTLR 4.8


#include "HuskyLangVisitor.h"

#include "HuskyLangParser.h"


using namespace antlrcpp;
using namespace antlr4;

HuskyLangParser::HuskyLangParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

HuskyLangParser::~HuskyLangParser() {
  delete _interpreter;
}

std::string HuskyLangParser::getGrammarFileName() const {
  return "HuskyLang.g4";
}

const std::vector<std::string>& HuskyLangParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& HuskyLangParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- StatementContext ------------------------------------------------------------------

HuskyLangParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t HuskyLangParser::StatementContext::getRuleIndex() const {
  return HuskyLangParser::RuleStatement;
}

void HuskyLangParser::StatementContext::copyFrom(StatementContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ToExpressionContext ------------------------------------------------------------------

HuskyLangParser::ExpressionContext* HuskyLangParser::ToExpressionContext::expression() {
  return getRuleContext<HuskyLangParser::ExpressionContext>(0);
}

tree::TerminalNode* HuskyLangParser::ToExpressionContext::EOF() {
  return getToken(HuskyLangParser::EOF, 0);
}

HuskyLangParser::ToExpressionContext::ToExpressionContext(StatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any HuskyLangParser::ToExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HuskyLangVisitor*>(visitor))
    return parserVisitor->visitToExpression(this);
  else
    return visitor->visitChildren(this);
}
HuskyLangParser::StatementContext* HuskyLangParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 0, HuskyLangParser::RuleStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    _localctx = dynamic_cast<StatementContext *>(_tracker.createInstance<HuskyLangParser::ToExpressionContext>(_localctx));
    enterOuterAlt(_localctx, 1);
    setState(24);
    expression();
    setState(25);
    match(HuskyLangParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

HuskyLangParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t HuskyLangParser::ExpressionContext::getRuleIndex() const {
  return HuskyLangParser::RuleExpression;
}

void HuskyLangParser::ExpressionContext::copyFrom(ExpressionContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ToLogicalContext ------------------------------------------------------------------

HuskyLangParser::LogicalContext* HuskyLangParser::ToLogicalContext::logical() {
  return getRuleContext<HuskyLangParser::LogicalContext>(0);
}

HuskyLangParser::ToLogicalContext::ToLogicalContext(ExpressionContext *ctx) { copyFrom(ctx); }


antlrcpp::Any HuskyLangParser::ToLogicalContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HuskyLangVisitor*>(visitor))
    return parserVisitor->visitToLogical(this);
  else
    return visitor->visitChildren(this);
}
HuskyLangParser::ExpressionContext* HuskyLangParser::expression() {
  ExpressionContext *_localctx = _tracker.createInstance<ExpressionContext>(_ctx, getState());
  enterRule(_localctx, 2, HuskyLangParser::RuleExpression);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    _localctx = dynamic_cast<ExpressionContext *>(_tracker.createInstance<HuskyLangParser::ToLogicalContext>(_localctx));
    enterOuterAlt(_localctx, 1);
    setState(27);
    logical(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LogicalContext ------------------------------------------------------------------

HuskyLangParser::LogicalContext::LogicalContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t HuskyLangParser::LogicalContext::getRuleIndex() const {
  return HuskyLangParser::RuleLogical;
}

void HuskyLangParser::LogicalContext::copyFrom(LogicalContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- LogicalOpContext ------------------------------------------------------------------

HuskyLangParser::LogicalContext* HuskyLangParser::LogicalOpContext::logical() {
  return getRuleContext<HuskyLangParser::LogicalContext>(0);
}

HuskyLangParser::CompareContext* HuskyLangParser::LogicalOpContext::compare() {
  return getRuleContext<HuskyLangParser::CompareContext>(0);
}

tree::TerminalNode* HuskyLangParser::LogicalOpContext::AND() {
  return getToken(HuskyLangParser::AND, 0);
}

tree::TerminalNode* HuskyLangParser::LogicalOpContext::OR() {
  return getToken(HuskyLangParser::OR, 0);
}

HuskyLangParser::LogicalOpContext::LogicalOpContext(LogicalContext *ctx) { copyFrom(ctx); }


antlrcpp::Any HuskyLangParser::LogicalOpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HuskyLangVisitor*>(visitor))
    return parserVisitor->visitLogicalOp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ToCompareContext ------------------------------------------------------------------

HuskyLangParser::CompareContext* HuskyLangParser::ToCompareContext::compare() {
  return getRuleContext<HuskyLangParser::CompareContext>(0);
}

HuskyLangParser::ToCompareContext::ToCompareContext(LogicalContext *ctx) { copyFrom(ctx); }


antlrcpp::Any HuskyLangParser::ToCompareContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HuskyLangVisitor*>(visitor))
    return parserVisitor->visitToCompare(this);
  else
    return visitor->visitChildren(this);
}

HuskyLangParser::LogicalContext* HuskyLangParser::logical() {
   return logical(0);
}

HuskyLangParser::LogicalContext* HuskyLangParser::logical(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  HuskyLangParser::LogicalContext *_localctx = _tracker.createInstance<LogicalContext>(_ctx, parentState);
  HuskyLangParser::LogicalContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 4;
  enterRecursionRule(_localctx, 4, HuskyLangParser::RuleLogical, precedence);

    

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    _localctx = _tracker.createInstance<ToCompareContext>(_localctx);
    _ctx = _localctx;
    previousContext = _localctx;

    setState(30);
    compare(0);
    _ctx->stop = _input->LT(-1);
    setState(40);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(38);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
        case 1: {
          auto newContext = _tracker.createInstance<LogicalOpContext>(_tracker.createInstance<LogicalContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleLogical);
          setState(32);

          if (!(precpred(_ctx, 3))) throw FailedPredicateException(this, "precpred(_ctx, 3)");
          setState(33);
          dynamic_cast<LogicalOpContext *>(_localctx)->op = match(HuskyLangParser::AND);
          setState(34);
          compare(0);
          break;
        }

        case 2: {
          auto newContext = _tracker.createInstance<LogicalOpContext>(_tracker.createInstance<LogicalContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleLogical);
          setState(35);

          if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
          setState(36);
          dynamic_cast<LogicalOpContext *>(_localctx)->op = match(HuskyLangParser::OR);
          setState(37);
          compare(0);
          break;
        }

        } 
      }
      setState(42);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- CompareContext ------------------------------------------------------------------

HuskyLangParser::CompareContext::CompareContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t HuskyLangParser::CompareContext::getRuleIndex() const {
  return HuskyLangParser::RuleCompare;
}

void HuskyLangParser::CompareContext::copyFrom(CompareContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ToPlusOrMinusContext ------------------------------------------------------------------

HuskyLangParser::PlusOrMinusContext* HuskyLangParser::ToPlusOrMinusContext::plusOrMinus() {
  return getRuleContext<HuskyLangParser::PlusOrMinusContext>(0);
}

HuskyLangParser::ToPlusOrMinusContext::ToPlusOrMinusContext(CompareContext *ctx) { copyFrom(ctx); }


antlrcpp::Any HuskyLangParser::ToPlusOrMinusContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HuskyLangVisitor*>(visitor))
    return parserVisitor->visitToPlusOrMinus(this);
  else
    return visitor->visitChildren(this);
}
//----------------- CompareOpContext ------------------------------------------------------------------

HuskyLangParser::CompareContext* HuskyLangParser::CompareOpContext::compare() {
  return getRuleContext<HuskyLangParser::CompareContext>(0);
}

HuskyLangParser::PlusOrMinusContext* HuskyLangParser::CompareOpContext::plusOrMinus() {
  return getRuleContext<HuskyLangParser::PlusOrMinusContext>(0);
}

tree::TerminalNode* HuskyLangParser::CompareOpContext::EQUAL() {
  return getToken(HuskyLangParser::EQUAL, 0);
}

tree::TerminalNode* HuskyLangParser::CompareOpContext::NEQ() {
  return getToken(HuskyLangParser::NEQ, 0);
}

tree::TerminalNode* HuskyLangParser::CompareOpContext::GT() {
  return getToken(HuskyLangParser::GT, 0);
}

tree::TerminalNode* HuskyLangParser::CompareOpContext::GTE() {
  return getToken(HuskyLangParser::GTE, 0);
}

tree::TerminalNode* HuskyLangParser::CompareOpContext::LT() {
  return getToken(HuskyLangParser::LT, 0);
}

tree::TerminalNode* HuskyLangParser::CompareOpContext::LTE() {
  return getToken(HuskyLangParser::LTE, 0);
}

HuskyLangParser::CompareOpContext::CompareOpContext(CompareContext *ctx) { copyFrom(ctx); }


antlrcpp::Any HuskyLangParser::CompareOpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HuskyLangVisitor*>(visitor))
    return parserVisitor->visitCompareOp(this);
  else
    return visitor->visitChildren(this);
}

HuskyLangParser::CompareContext* HuskyLangParser::compare() {
   return compare(0);
}

HuskyLangParser::CompareContext* HuskyLangParser::compare(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  HuskyLangParser::CompareContext *_localctx = _tracker.createInstance<CompareContext>(_ctx, parentState);
  HuskyLangParser::CompareContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 6;
  enterRecursionRule(_localctx, 6, HuskyLangParser::RuleCompare, precedence);

    

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    _localctx = _tracker.createInstance<ToPlusOrMinusContext>(_localctx);
    _ctx = _localctx;
    previousContext = _localctx;

    setState(44);
    plusOrMinus(0);
    _ctx->stop = _input->LT(-1);
    setState(66);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(64);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
        case 1: {
          auto newContext = _tracker.createInstance<CompareOpContext>(_tracker.createInstance<CompareContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleCompare);
          setState(46);

          if (!(precpred(_ctx, 7))) throw FailedPredicateException(this, "precpred(_ctx, 7)");
          setState(47);
          dynamic_cast<CompareOpContext *>(_localctx)->op = match(HuskyLangParser::EQUAL);
          setState(48);
          plusOrMinus(0);
          break;
        }

        case 2: {
          auto newContext = _tracker.createInstance<CompareOpContext>(_tracker.createInstance<CompareContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleCompare);
          setState(49);

          if (!(precpred(_ctx, 6))) throw FailedPredicateException(this, "precpred(_ctx, 6)");
          setState(50);
          dynamic_cast<CompareOpContext *>(_localctx)->op = match(HuskyLangParser::NEQ);
          setState(51);
          plusOrMinus(0);
          break;
        }

        case 3: {
          auto newContext = _tracker.createInstance<CompareOpContext>(_tracker.createInstance<CompareContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleCompare);
          setState(52);

          if (!(precpred(_ctx, 5))) throw FailedPredicateException(this, "precpred(_ctx, 5)");
          setState(53);
          dynamic_cast<CompareOpContext *>(_localctx)->op = match(HuskyLangParser::GT);
          setState(54);
          plusOrMinus(0);
          break;
        }

        case 4: {
          auto newContext = _tracker.createInstance<CompareOpContext>(_tracker.createInstance<CompareContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleCompare);
          setState(55);

          if (!(precpred(_ctx, 4))) throw FailedPredicateException(this, "precpred(_ctx, 4)");
          setState(56);
          dynamic_cast<CompareOpContext *>(_localctx)->op = match(HuskyLangParser::GTE);
          setState(57);
          plusOrMinus(0);
          break;
        }

        case 5: {
          auto newContext = _tracker.createInstance<CompareOpContext>(_tracker.createInstance<CompareContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleCompare);
          setState(58);

          if (!(precpred(_ctx, 3))) throw FailedPredicateException(this, "precpred(_ctx, 3)");
          setState(59);
          dynamic_cast<CompareOpContext *>(_localctx)->op = match(HuskyLangParser::LT);
          setState(60);
          plusOrMinus(0);
          break;
        }

        case 6: {
          auto newContext = _tracker.createInstance<CompareOpContext>(_tracker.createInstance<CompareContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleCompare);
          setState(61);

          if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
          setState(62);
          dynamic_cast<CompareOpContext *>(_localctx)->op = match(HuskyLangParser::LTE);
          setState(63);
          plusOrMinus(0);
          break;
        }

        } 
      }
      setState(68);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- PlusOrMinusContext ------------------------------------------------------------------

HuskyLangParser::PlusOrMinusContext::PlusOrMinusContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t HuskyLangParser::PlusOrMinusContext::getRuleIndex() const {
  return HuskyLangParser::RulePlusOrMinus;
}

void HuskyLangParser::PlusOrMinusContext::copyFrom(PlusOrMinusContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ToMultOrDivContext ------------------------------------------------------------------

HuskyLangParser::MultOrDivContext* HuskyLangParser::ToMultOrDivContext::multOrDiv() {
  return getRuleContext<HuskyLangParser::MultOrDivContext>(0);
}

HuskyLangParser::ToMultOrDivContext::ToMultOrDivContext(PlusOrMinusContext *ctx) { copyFrom(ctx); }


antlrcpp::Any HuskyLangParser::ToMultOrDivContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HuskyLangVisitor*>(visitor))
    return parserVisitor->visitToMultOrDiv(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AddSubOpContext ------------------------------------------------------------------

HuskyLangParser::PlusOrMinusContext* HuskyLangParser::AddSubOpContext::plusOrMinus() {
  return getRuleContext<HuskyLangParser::PlusOrMinusContext>(0);
}

HuskyLangParser::MultOrDivContext* HuskyLangParser::AddSubOpContext::multOrDiv() {
  return getRuleContext<HuskyLangParser::MultOrDivContext>(0);
}

tree::TerminalNode* HuskyLangParser::AddSubOpContext::PLUS() {
  return getToken(HuskyLangParser::PLUS, 0);
}

tree::TerminalNode* HuskyLangParser::AddSubOpContext::MINUS() {
  return getToken(HuskyLangParser::MINUS, 0);
}

HuskyLangParser::AddSubOpContext::AddSubOpContext(PlusOrMinusContext *ctx) { copyFrom(ctx); }


antlrcpp::Any HuskyLangParser::AddSubOpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HuskyLangVisitor*>(visitor))
    return parserVisitor->visitAddSubOp(this);
  else
    return visitor->visitChildren(this);
}

HuskyLangParser::PlusOrMinusContext* HuskyLangParser::plusOrMinus() {
   return plusOrMinus(0);
}

HuskyLangParser::PlusOrMinusContext* HuskyLangParser::plusOrMinus(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  HuskyLangParser::PlusOrMinusContext *_localctx = _tracker.createInstance<PlusOrMinusContext>(_ctx, parentState);
  HuskyLangParser::PlusOrMinusContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 8;
  enterRecursionRule(_localctx, 8, HuskyLangParser::RulePlusOrMinus, precedence);

    

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    _localctx = _tracker.createInstance<ToMultOrDivContext>(_localctx);
    _ctx = _localctx;
    previousContext = _localctx;

    setState(70);
    multOrDiv(0);
    _ctx->stop = _input->LT(-1);
    setState(80);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(78);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
        case 1: {
          auto newContext = _tracker.createInstance<AddSubOpContext>(_tracker.createInstance<PlusOrMinusContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RulePlusOrMinus);
          setState(72);

          if (!(precpred(_ctx, 3))) throw FailedPredicateException(this, "precpred(_ctx, 3)");
          setState(73);
          dynamic_cast<AddSubOpContext *>(_localctx)->op = match(HuskyLangParser::PLUS);
          setState(74);
          multOrDiv(0);
          break;
        }

        case 2: {
          auto newContext = _tracker.createInstance<AddSubOpContext>(_tracker.createInstance<PlusOrMinusContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RulePlusOrMinus);
          setState(75);

          if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
          setState(76);
          dynamic_cast<AddSubOpContext *>(_localctx)->op = match(HuskyLangParser::MINUS);
          setState(77);
          multOrDiv(0);
          break;
        }

        } 
      }
      setState(82);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- MultOrDivContext ------------------------------------------------------------------

HuskyLangParser::MultOrDivContext::MultOrDivContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t HuskyLangParser::MultOrDivContext::getRuleIndex() const {
  return HuskyLangParser::RuleMultOrDiv;
}

void HuskyLangParser::MultOrDivContext::copyFrom(MultOrDivContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ToUnaryContext ------------------------------------------------------------------

HuskyLangParser::UnaryContext* HuskyLangParser::ToUnaryContext::unary() {
  return getRuleContext<HuskyLangParser::UnaryContext>(0);
}

HuskyLangParser::ToUnaryContext::ToUnaryContext(MultOrDivContext *ctx) { copyFrom(ctx); }


antlrcpp::Any HuskyLangParser::ToUnaryContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HuskyLangVisitor*>(visitor))
    return parserVisitor->visitToUnary(this);
  else
    return visitor->visitChildren(this);
}
//----------------- MultiDivOpContext ------------------------------------------------------------------

HuskyLangParser::MultOrDivContext* HuskyLangParser::MultiDivOpContext::multOrDiv() {
  return getRuleContext<HuskyLangParser::MultOrDivContext>(0);
}

HuskyLangParser::PowrContext* HuskyLangParser::MultiDivOpContext::powr() {
  return getRuleContext<HuskyLangParser::PowrContext>(0);
}

tree::TerminalNode* HuskyLangParser::MultiDivOpContext::MULT() {
  return getToken(HuskyLangParser::MULT, 0);
}

tree::TerminalNode* HuskyLangParser::MultiDivOpContext::DIV() {
  return getToken(HuskyLangParser::DIV, 0);
}

HuskyLangParser::MultiDivOpContext::MultiDivOpContext(MultOrDivContext *ctx) { copyFrom(ctx); }


antlrcpp::Any HuskyLangParser::MultiDivOpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HuskyLangVisitor*>(visitor))
    return parserVisitor->visitMultiDivOp(this);
  else
    return visitor->visitChildren(this);
}

HuskyLangParser::MultOrDivContext* HuskyLangParser::multOrDiv() {
   return multOrDiv(0);
}

HuskyLangParser::MultOrDivContext* HuskyLangParser::multOrDiv(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  HuskyLangParser::MultOrDivContext *_localctx = _tracker.createInstance<MultOrDivContext>(_ctx, parentState);
  HuskyLangParser::MultOrDivContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 10;
  enterRecursionRule(_localctx, 10, HuskyLangParser::RuleMultOrDiv, precedence);

    

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    _localctx = _tracker.createInstance<ToUnaryContext>(_localctx);
    _ctx = _localctx;
    previousContext = _localctx;

    setState(84);
    unary();
    _ctx->stop = _input->LT(-1);
    setState(94);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(92);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
        case 1: {
          auto newContext = _tracker.createInstance<MultiDivOpContext>(_tracker.createInstance<MultOrDivContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleMultOrDiv);
          setState(86);

          if (!(precpred(_ctx, 3))) throw FailedPredicateException(this, "precpred(_ctx, 3)");
          setState(87);
          dynamic_cast<MultiDivOpContext *>(_localctx)->op = match(HuskyLangParser::MULT);
          setState(88);
          powr(0);
          break;
        }

        case 2: {
          auto newContext = _tracker.createInstance<MultiDivOpContext>(_tracker.createInstance<MultOrDivContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleMultOrDiv);
          setState(89);

          if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
          setState(90);
          dynamic_cast<MultiDivOpContext *>(_localctx)->op = match(HuskyLangParser::DIV);
          setState(91);
          powr(0);
          break;
        }

        } 
      }
      setState(96);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- UnaryContext ------------------------------------------------------------------

HuskyLangParser::UnaryContext::UnaryContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t HuskyLangParser::UnaryContext::getRuleIndex() const {
  return HuskyLangParser::RuleUnary;
}

void HuskyLangParser::UnaryContext::copyFrom(UnaryContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- UnaryOpContext ------------------------------------------------------------------

HuskyLangParser::PowrContext* HuskyLangParser::UnaryOpContext::powr() {
  return getRuleContext<HuskyLangParser::PowrContext>(0);
}

tree::TerminalNode* HuskyLangParser::UnaryOpContext::MINUS() {
  return getToken(HuskyLangParser::MINUS, 0);
}

tree::TerminalNode* HuskyLangParser::UnaryOpContext::NOT() {
  return getToken(HuskyLangParser::NOT, 0);
}

HuskyLangParser::UnaryOpContext::UnaryOpContext(UnaryContext *ctx) { copyFrom(ctx); }


antlrcpp::Any HuskyLangParser::UnaryOpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HuskyLangVisitor*>(visitor))
    return parserVisitor->visitUnaryOp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ToPowerContext ------------------------------------------------------------------

HuskyLangParser::PowrContext* HuskyLangParser::ToPowerContext::powr() {
  return getRuleContext<HuskyLangParser::PowrContext>(0);
}

HuskyLangParser::ToPowerContext::ToPowerContext(UnaryContext *ctx) { copyFrom(ctx); }


antlrcpp::Any HuskyLangParser::ToPowerContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HuskyLangVisitor*>(visitor))
    return parserVisitor->visitToPower(this);
  else
    return visitor->visitChildren(this);
}
HuskyLangParser::UnaryContext* HuskyLangParser::unary() {
  UnaryContext *_localctx = _tracker.createInstance<UnaryContext>(_ctx, getState());
  enterRule(_localctx, 12, HuskyLangParser::RuleUnary);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(102);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case HuskyLangParser::MINUS: {
        _localctx = dynamic_cast<UnaryContext *>(_tracker.createInstance<HuskyLangParser::UnaryOpContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(97);
        dynamic_cast<UnaryOpContext *>(_localctx)->op = match(HuskyLangParser::MINUS);
        setState(98);
        powr(0);
        break;
      }

      case HuskyLangParser::NOT: {
        _localctx = dynamic_cast<UnaryContext *>(_tracker.createInstance<HuskyLangParser::UnaryOpContext>(_localctx));
        enterOuterAlt(_localctx, 2);
        setState(99);
        dynamic_cast<UnaryOpContext *>(_localctx)->op = match(HuskyLangParser::NOT);
        setState(100);
        powr(0);
        break;
      }
